--- a/amplify.yml
+++ b/amplify.yml
@@ -1,6 +1,10 @@
 version: 1
 backend:
   phases:
+    preBuild:
+      commands:
+        - npm install aws-cdk@^2
+        - cdk bootstrap aws://$AWS_ACCOUNT_ID/$AWS_REGION
     build:
       commands:
         - npm ci --cache .npm --prefer-offline
