--- a/amplify.yml
+++ b/amplify.yml
@@ -4,10 +4,10 @@ backend:
     preBuild:
       commands:
         - npm install aws-cdk@^2
-        - cdk bootstrap aws://$AWS_ACCOUNT_ID/$AWS_REGION
+        - aws cdk bootstrap aws://$AWS_ACCOUNT_ID/$AWS_REGION
     build:
       commands:
-        - npm ci --cache .npm --prefer-offline
+        - npm ci
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
